--- a/views/user/logIn.ejs
+++ b/views/user/logIn.ejs
@@ -9,7 +9,7 @@
         <h1> Sign In </h1>
         <% if (hasErrors) %>
         <div> <%= messages %> </div>
-        <form action="/user/signin" method="post">
+        <form action="/user/logIn" method="post">
             <div>
                 <label>Username:</label>
                 <input id='username' type="text" name="username" />
