--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,5 +5,6 @@
       <li class = 'floatRight'><a href='/user/signup'>Sign Up</a></li>
     <% } else { %>
       <li class = 'floatRight'><a href='/user/logout'>Log Out</a></li>
+      <li class = 'floatRight'><a href='/poll/managePolls'>Manage Polls</a></li>
     <% } %>
 </ul>
