--- a/views/poll/viewPoll.ejs
+++ b/views/poll/viewPoll.ejs
@@ -25,7 +25,7 @@
 
             var options = {
                 //title: none,
-                colors: ['ffc199', '#ffa366', '#ff8432', '#ff6600', '#cc5100', '#993d00', '#662800', '#331400'],
+                colors: ['#ffc199', '#ffa366', '#ff8432', '#ff6600', '#cc5100', '#993d00', '#662800', '#331400'],
                 is3D: false
             };
 
