--- a/views/poll/managePolls.ejs
+++ b/views/poll/managePolls.ejs
@@ -4,21 +4,22 @@
     <script src="https://use.fontawesome.com/f2d227ff87.js"></script>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   </head>
   <body>
     <% include ../partials/navbar.ejs %>
-    <h1 class='title'><%= title %></h1>
+    <img src='/images/pollME.png' class='titleImage'>
     <p class='tagline'>Polls owned by <%= user %></p>
-    <!-- TODO: add function to tweet button -->
         <% for(var i=0; i<polls.length; i++) {
           if(polls[i].creatorID == user){%>
             <ul class='managePollList'>
               <li class='managePollListItem'><a href='../poll?id=<%= polls[i]._id%>'><%= polls[i].pollTitle %></a></li>
               <li class='deletePollButton'><a href='../poll/delete?id=<%= polls[i]._id%>'><i class='fa fa-trash'></i></a></li>
-              <li class='tweetPollButton'><a href='../poll?id=<%= polls[i]._id%>'><i class='fa fa-twitter'></i></a></li>
+              <li class='tweetPollButton'><a href='../poll/tweet%>'><i class='fa fa-twitter'></i></a></li>
             </ul>
         <% };
       }; %>
     <script   src="https://code.jquery.com/jquery-1.12.4.min.js"   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="   crossorigin="anonymous"></script>
+    <% include ../partials/footer.ejs %>
   </body>
 </html>
