--- a/views/user/logIn.ejs
+++ b/views/user/logIn.ejs
@@ -24,6 +24,7 @@
             </div>
         </form>
         <% console.log(csrfToken) %>
+        <% include ../partials/footer.ejs %>
 </body>
 
 </html>
