--- a/views/poll/createPoll.ejs
+++ b/views/poll/createPoll.ejs
@@ -2,6 +2,7 @@
 
 <head>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 </head>
 
 <body>
@@ -21,6 +22,7 @@
                   </form>
                 </div>
               <% } %>
+              <% include ../partials/footer.ejs %>
 </body>
 
 </html>
