--- a/views/user/loggedIn.ejs
+++ b/views/user/loggedIn.ejs
@@ -7,6 +7,7 @@
 <body>
     <% include ../partials/navbar.ejs %>
         <h1> Logged In! </h1>
+        <% include ../partials/footer.ejs %>
 </body>
 
 </html>
