--- a/views/poll/viewPoll.ejs
+++ b/views/poll/viewPoll.ejs
@@ -1,8 +1,7 @@
 <html>
 
 <head>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <% include ../partials/head.ejs %>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
         google.charts.load('current', {'packages': ['corechart']});
@@ -40,6 +39,7 @@
 </head>
 
 <body>
+  <div class='content'>
     <% include ../partials/navbar.ejs %>
         <div style='text-align: center'>
           <% if (alert){%>
@@ -64,7 +64,8 @@
             </ul>
 
         </div>
-        <% include ../partials/footer.ejs %>
+      </div>
+      <% include ../partials/footer.ejs %>
 </body>
 
 </html>
