--- a/views/user/loggedIn.ejs
+++ b/views/user/loggedIn.ejs
@@ -1,12 +1,14 @@
 <html>
 
 <head>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+  <% include ../partials/head.ejs %>
 </head>
 
 <body>
+  <div class='content'>
     <% include ../partials/navbar.ejs %>
         <h1> Logged In! </h1>
+      </div>
         <% include ../partials/footer.ejs %>
 </body>
 
