--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -1,29 +1,33 @@
 <html>
 
 <head>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+  <% include ../partials/head.ejs %>
 </head>
 
 <body>
+  <div class='content'>
     <% include ../partials/navbar.ejs %>
-        <h1> Sign Up </h1>
+        <h1 class='col-sm-offset-2 formTitle'> Sign Up </h1>
         <% if (hasErrors) %>
         <div> <%= messages %> </div>
-        <form action="/user/signup" method="post">
-            <div>
-                <label>Username:</label>
+        <form class='form-horizontal' action="/user/signup" method="post">
+            <div class='form-group'>
+                <label class='control-label col-sm-2' for='username'>Username:</label>
+                <div class='col-sm-5'>
                 <input id='username' type="text" name="username" />
+              </div>
             </div>
-            <div>
-                <label>Password:</label>
+            <div  class='form-group'>
+                <label  class='control-label col-sm-2' for='password'>Password:</label>
+                <div  class='col-sm-5'>
                 <input id='password' type="password" name="password" />
+              </div>
             </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <div>
-                <input type="submit" value="Sign Up" />
-            </div>
+            <button   class='col-sm-offset-2' type='submit' class='btn btn-default'>Submit</button>
         </form>
         <% console.log(csrfToken) %>
+      </div>
         <% include ../partials/footer.ejs %>
 </body>
 
